@@ -2,8 +2,12 @@ Revision history for Path-Class-Tiny
 
 {{$NEXT}}
 
+    [Bug Fixes]
+    * `parent` is returning the proper class now
+
     [Distro Fixes]
     * minor tweaks to POD
+    * more unit tests
 
 0.01      2018-05-26 03:47:15-07:00 America/Los_Angeles
 
